swagger 1.0.5 update
