# src/app/user/enums/user-type.enum.ts
@@ -1,0 +1,4 @@
+export enum UserType {
+    INDIVIDUAL = 'individual',
+    GROUP = 'group'
+}
